feat: use workspace arq

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,6 @@
-[package]
-name = "xemurs"
-version = "0.0.1"
-edition = "2021"
-authors = ["Esteban Borai <estebanborai@gmail.com>"]
-description = "Extended Emulators CLI"
-repository = "https://github.com/xemurs/cli"
-keywords = ["emulator"]
-license = "MIT"
-readme = "README.md"
+[workspace]
+members = [
+  "crates/cli",
+]
 
-[dependencies]
-clap = { version = "4.2.7", features = ["derive"] }
+default-members = ["crates/cli"]
