--- a/crates/drivers/Cargo.toml
+++ b/crates/drivers/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "xemurs"
+name = "drivers"
 version = "0.1.0"
 edition = "2021"
 authors = ["Esteban Borai <estebanborai@gmail.com>"]
-description = "Extended Emulators CLI"
-repository = "https://github.com/xemurs/cli"
+description = "Xemurs Drivers"
+repository = "https://github.com/xemurs/drivers"
 keywords = ["emulator"]
 license = "MIT"
 readme = "README.md"
 
 [dependencies]
-clap = { version = "4.2.7", features = ["derive"] }
+sdl2 = "0.35.2"
+thiserror = "1.0.40"
