--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -14,4 +14,5 @@ clap = { version = "4.2.7", features = ["derive"] }
 color-eyre = "0.6.2"
 
 # Local Dependencies
+emulator = { path = "../emulator" }
 system = { path = "../system" }
